--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/page/__content/page__content.css);
 /*---header---*/
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 /*---profile---*/
 @import url(../blocks/profile/profile.css);
 /*---elements---*/
