--- a/pages/index.css
+++ b/pages/index.css
@@ -11,3 +11,4 @@
 @import url(../blocks/elements/elements.css);
 /*---footer---*/
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
