--- a/pages/index.css
+++ b/pages/index.css
@@ -13,8 +13,13 @@
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__profession/profile__profession.css);
 @import url(../blocks/profile/__add-photo/profile__add-photo.css);
-/*---elements---*/
-@import url(../blocks/elements/elements.css);
+/*---photo-grid---*/
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__element/photo-grid__element.css);
+@import url(../blocks/photo-grid/__image/photo-grid__image.css);
+@import url(../blocks/photo-grid/__title-wrap/photo-grid__title-wrap.css);
+@import url(../blocks/photo-grid/__title/photo-grid__title.css);
+@import url(../blocks/photo-grid/__like-button/photo-grid__like-button.css);
 /*---footer---*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
