--- a/blocks/profile/__add-photo/profile__add-photo.css
+++ b/blocks/profile/__add-photo/profile__add-photo.css
@@ -3,7 +3,7 @@
     background-color: black;
     border: 1px solid #FFFFFF;
     cursor: pointer;
-    height: 50px;
+    min-height: 50px;
     width: 282px;
 }
 
