--- a/blocks/photo-grid/__like-button/photo-grid__like-button.css
+++ b/blocks/photo-grid/__like-button/photo-grid__like-button.css
@@ -2,13 +2,15 @@
     background-color: #fff;
     border: none;
     cursor: pointer;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29px;
+    width: 22px;
+    min-height: 19px;
+    align-self: center;
+    background-image: url(../../../image/elements/disabled.svg);
 }
 
 .photo-grid__like-button:hover {
     opacity: 0.6;
+}
+.photo-grid__like-button:active {
+    background-image: url(../../../image/elements/active.svg);
 }
