--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -8,8 +8,8 @@
     position: absolute;
     top: -36px;
     right: 0;
-    max-width: 20px;
-    max-height: 20px;
+    width: 20px;
+    min-height: 20px;
 
 }
 
@@ -18,8 +18,8 @@
 }
 @media screen and (min-width: 880px) {
     .popup__close-button {
-        max-width: 32px;
-        max-height: 32px;
+        width: 32px;
+        min-height: 32px;
         right: -36px;
     }
 }
