--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     color: #000;
     width: 282px;
-    min-height: 322px;
+    max-height: 322px;
     border-radius: 10px;
     position: relative;
 }
@@ -10,6 +10,6 @@
 @media screen and (min-width: 880px) {
     .popup__form {
         width: 430px;
-        min-height: 330px;
+        max-height: 330px;
     }
 }
