--- a/blocks/popup/__form/__content/form__content.css
+++ b/blocks/popup/__form/__content/form__content.css
@@ -1,4 +1,4 @@
-.popup__form_content {
+.form__content {
     margin: 25px auto;
     padding: 0;
     list-style-type: none;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .popup__form_content {
+    .form__content {
         width: 358px;
         margin: 35px auto;
     }
