--- a/blocks/popup/__form/__nickname-input/form__nickname-input.css
+++ b/blocks/popup/__form/__nickname-input/form__nickname-input.css
@@ -1,4 +1,4 @@
-.popup__form_nickname-input {
+.form__nickname-input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 13px;
@@ -11,13 +11,13 @@
     line-height: 17px; 
 }
 
-.popup__form_nickname-input:focus {
+.form__nickname-input:focus {
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
 }
 
 @media screen and (min-width: 880px) {
-    .popup__form_nickname-input {
+    .form__nickname-input {
         margin-top: 54px;
     }
 }
