--- a/blocks/popup/__form/__profession-input/form__profession-input.css
+++ b/blocks/popup/__form/__profession-input/form__profession-input.css
@@ -1,4 +1,4 @@
-.popup__form_profession-input {
+.form__profession-input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 13px;
@@ -11,7 +11,7 @@
     line-height: 17px; 
 }
 
-.popup__form_profession-input:focus {
+.form__profession-input:focus {
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
 }
