--- a/blocks/popup/__form/__title/form__title.css
+++ b/blocks/popup/__form/__title/form__title.css
@@ -1,4 +1,4 @@
-.popup__form_title {
+.form__title {
     margin: 0;
     font-family: Inter;
     font-style: normal;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .popup__form_title {
+    .form__title {
         font-size: 24px;
         line-height: 29px;
     }
