--- a/blocks/popup/__form/_title/form_title.css
+++ b/blocks/popup/__form/_title/form_title.css
@@ -1,4 +1,4 @@
-.form__title {
+.form_title {
     margin: 0;
     font-family: Inter;
     font-style: normal;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .form__title {
+    .form_title {
         font-size: 24px;
         line-height: 29px;
     }
