--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,4 +1,4 @@
-.form_content {
+.popup__content {
     margin: 25px auto;
     padding: 0;
     list-style-type: none;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .form_content {
+    .popup__content {
         width: 358px;
         margin: 35px auto;
     }
