--- a/blocks/popup/__nickname-input/popup__nickname-input.css
+++ b/blocks/popup/__nickname-input/popup__nickname-input.css
@@ -1,8 +1,8 @@
-.form_profession-input {
+.popup__nickname-input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 13px;
-    margin-top: 30px;
+    margin-top: 75px;
     width: 100%;
     font-family: Inter;
     font-style: normal;
@@ -11,7 +11,13 @@
     line-height: 17px; 
 }
 
-.form_profession-input:focus {
+.popup__nickname-input:focus {
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
+}
+
+@media screen and (min-width: 880px) {
+    .popup__nickname-input {
+        margin-top: 54px;
+    }
 }
