--- a/blocks/popup/__profession-input/popup__profession-input.css
+++ b/blocks/popup/__profession-input/popup__profession-input.css
@@ -1,8 +1,8 @@
-.form_nickname-input {
+.popup__profession-input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 13px;
-    margin-top: 75px;
+    margin-top: 30px;
     width: 100%;
     font-family: Inter;
     font-style: normal;
@@ -11,13 +11,7 @@
     line-height: 17px; 
 }
 
-.form_nickname-input:focus {
+.popup__profession-input:focus {
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
-}
-
-@media screen and (min-width: 880px) {
-    .form_nickname-input {
-        margin-top: 54px;
-    }
 }
