--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.form_title {
+.popup__title {
     margin: 0;
     font-family: Inter;
     font-style: normal;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .form_title {
+    .popup__title {
         font-size: 24px;
         line-height: 29px;
     }
