--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,7 +4,7 @@
     width: 238px;
     min-height: 46px;
     margin-top: 45px;
-    font-family: Inter;
+    border-radius: 2px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -14,11 +14,13 @@
 }
 
 .popup__save-button:hover {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 @media screen and (min-width: 880px) {
     .popup__save-button {
+        font-size: 18px;
+        line-height: 22px;
         width: 358px;
         min-height: 50px;
     }
