--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,7 @@
 @media screen and (min-width: 768px) {
     .footer {
         margin-left: 20px;
+        margin-bottom: 60px;
         width: 318px;
     }
 }
