--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,17 +1,12 @@
-.popup__profession-input {
+.popup__input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 13px;
-    margin-top: 30px;
-    width: 100%;
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px; 
 }
-
-.popup__profession-input:focus {
+.popup__input:focus {
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
 }
