--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -1,6 +1,6 @@
 .profile__profession {
     margin: 0;
-    font-family: Inter;
+    margin-top: 14px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -11,6 +11,7 @@
 
 @media screen and (min-width: 768px) {
     .profile__profession {
+        margin-top: 16px;
         font-size: 18px;
         line-height: 22px;
         text-align: left;
