--- a/blocks/photo-grid/__title-wrap/photo-grid__title-wrap.css
+++ b/blocks/photo-grid/__title-wrap/photo-grid__title-wrap.css
@@ -1,5 +1,5 @@
 .photo-grid__title-wrap {
     display: flex;
     justify-content: space-between;
-    margin: 0 20px;
+    margin: 5px 20px auto;
 }
