--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -20,6 +20,7 @@
     .popup__close-button {
         width: 32px;
         min-height: 32px;
-        right: -36px;
+        right: -40px;
+        top: -40px;
     }
 }
