--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -23,5 +23,7 @@
         line-height: 22px;
         width: 358px;
         min-height: 50px;
+        margin-top: 48px;
+        margin-bottom: 5px;
     }
 }
