--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,8 +1,14 @@
 .profile__edit {
+    width: 18px;
+    min-height: 18px;
+    padding: 0;
     margin: 0;
     background-color: rgba(0, 0, 0, 0);
+    background-image: url(../../../image/profile/edit-button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     position: absolute;
-    top: 8px;
+    top: 12px;
     right: 19px;
     border: 1px solid #FFFFFF;
     cursor: pointer;
@@ -19,6 +25,8 @@
 
 @media screen and (min-width: 1024px) {
     .profile__edit {
+        width: 24px;
+        min-height: 24px;
         right: 0;
         top: 15px;
     }
