--- a/blocks/profile/__nickname/profile__nickname.css
+++ b/blocks/profile/__nickname/profile__nickname.css
@@ -1,21 +1,28 @@
 .profile__nickname {
-    margin: 0;
+    margin: 0 auto;
+    margin-top: 4px;
     font-style: normal;
+    text-align: center;
     font-weight: 500;
     font-size: 27px;
     line-height: 33px;
-    text-align: center;
     color: #FFFFFF;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 189px;
 }
 
 @media screen and (min-width: 768px) {
     .profile__nickname {
         text-align: left;
+        margin: 0;
     }
 }
 @media screen and (min-width: 1024px) {
     .profile__nickname {
         font-size: 42px;
         line-height: 48px;
+        max-width: 294px;
     }
 }
