--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,23 +1,21 @@
 .profile {
     display: grid;
     min-width: 282px;
-    margin: 36px auto;
+    margin: 40px auto;
     justify-items: center;
 }
 @media screen and (min-width: 540px) {
     .profile {
-        margin: 36px 20px;
+        margin: 39px auto;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: auto;
         column-gap: 10px;
     }
 }
 
 @media screen and (min-width: 768px) {
     .profile {
-        margin: 36px 20px;
-        grid-template-columns: 200px repeat(2, 1fr);
-        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: 120px repeat(2, 1fr);
         column-gap: 0;
         align-items: end;
     }
@@ -26,7 +24,7 @@
     .profile {
         margin-left: 0;
         margin-right: 0;
-        margin-bottom: 47px;
+        margin-bottom: 50px;
         grid-template-columns: 148px repeat(2, 1fr);
     }
 }
