--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,8 +5,10 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 17px; 
+    color: #c4c4c4;
 }
 .popup__input:focus {
+    color: #000;
     outline: none;
     border-bottom: 2px solid rgba(0, 0, 0, 0.6);
 }
