--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,10 +5,12 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #c4c4c4;
+  color: #000
 }
 .popup__input:focus {
-  color: #000;
   outline: none;
   border-bottom: 2px solid rgba(0, 0, 0, 0.6);
+}
+.popup__input::placeholder {
+  color: #c4c4c4;
 }
