--- a/blocks/profile/__nick-name/profile__nick-name.css
+++ b/blocks/profile/__nick-name/profile__nick-name.css
@@ -1,4 +1,4 @@
-.profile__nickname {
+.profile__nick-name {
     margin: 0 auto;
     margin-top: 4px;
     font-style: normal;
@@ -14,13 +14,13 @@
 }
 
 @media screen and (min-width: 768px) {
-    .profile__nickname {
+    .profile__nick-name {
         text-align: left;
         margin: 0;
     }
 }
 @media screen and (min-width: 1024px) {
-    .profile__nickname {
+    .profile__nick-name {
         font-size: 42px;
         line-height: 48px;
         max-width: 294px;
