--- a/pages/index.css
+++ b/pages/index.css
@@ -9,24 +9,26 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__nickname/profile__nickname.css);
+@import url(../blocks/profile/__nick-name/profile__nick-name.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__profession/profile__profession.css);
 @import url(../blocks/profile/__add-photo/profile__add-photo.css);
 /*---photo-grid---*/
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/__element/photo-grid__element.css);
-@import url(../blocks/photo-grid/__image/photo-grid__image.css);
-@import url(../blocks/photo-grid/__title-wrap/photo-grid__title-wrap.css);
-@import url(../blocks/photo-grid/__title/photo-grid__title.css);
-@import url(../blocks/photo-grid/__like-button/photo-grid__like-button.css);
-@import url(../blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css);
-@import url(../blocks/photo-grid/__delete-button/photo-grid__delete-button.css);
+/*---card---*/
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__title-wrap/card__title-wrap.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
 /*---footer---*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 /*---popup---*/
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_type_max-img/popup_type_max-img.css);
 @import url(../blocks/popup/__body/popup__body.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__form-content/popup__form-content.css);
