fix: preppend review bug

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
-  color: #000
+  color: #000;
 }
 .popup__input:focus {
   outline: none;
