fit: html/css validation

--- a/blocks/form/__content/form__content.css
+++ b/blocks/form/__content/form__content.css
@@ -1,10 +1,10 @@
-.popup__form-content {
+.form__content {
     margin: 25px auto;
     width: 238px;
 }
 
 @media screen and (min-width: 880px) {
-    .popup__form-content {
+    .form__content {
         width: 358px;
         margin: 33px auto;
     }
