--- a/pages/index.css
+++ b/pages/index.css
@@ -30,17 +30,19 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_type_max-img/popup_type_max-img.css);
 @import url(../blocks/popup/__body/popup__body.css);
-@import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__form-content/popup__form-content.css);
-@import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__input/popup__input.css);
-@import url(../blocks/popup/__input/_name_position/popup__input_name_position.css);
-@import url(../blocks/popup/__input/_prof_position/popup__input_prof_position.css);
-@import url(../blocks/popup/__input/_place_position/popup__input_place_position.css);
-@import url(../blocks/popup/__input/_place-link_position/popup__input_place-link_position.css);
-@import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__content-max-img/popup__content-max-img.css);
 @import url(../blocks/popup/__max-img-title/popup__max-img-title.css);
 @import url(../blocks/popup/__max-img/popup__max-img.css);
+/*---form---*/
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__content/form__content.css);
+@import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__input/_type_error/form__input_type_error.css);
+@import url(../blocks/form/__input/_name_position/form__input_name_position.css);
+@import url(../blocks/form/__input/_prof_position/form__input_prof_position.css);
+@import url(../blocks/form/__input/_place_position/form__input_place_position.css);
+@import url(../blocks/form/__input/_place-link_position/form__input_place-link_position.css);
+@import url(../blocks/form/__save-button/form__save-button.css);
