--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,4 +1,4 @@
-.popup__input {
+.form__input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-style: normal;
@@ -7,10 +7,10 @@
   line-height: 17px;
   color: #000;
 }
-.popup__input:focus {
+.form__input:focus {
   outline: none;
   border-bottom: 2px solid rgba(0, 0, 0, 0.6);
 }
-.popup__input::placeholder {
+.form__input::placeholder {
   color: #c4c4c4;
 }
