--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -1,4 +1,4 @@
-.popup__save-button {
+.form__save-button {
     background-color: #000;
     color: #fff;
     width: 238px;
@@ -13,12 +13,12 @@
     cursor: pointer;
 }
 
-.popup__save-button:hover {
+.form__save-button:hover {
     opacity: 0.8;
 }
 
 @media screen and (min-width: 880px) {
-    .popup__save-button {
+    .form__save-button {
         font-size: 18px;
         line-height: 22px;
         width: 358px;
