--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,4 +1,4 @@
-.popup__title {
+.form__title {
     margin: 0;
     font-style: normal;
     font-weight: 900;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (min-width: 880px) {
-    .popup__title {
+    .form__title {
         font-size: 24px;
         line-height: 29px;
     }
