--- a/pages/index.css
+++ b/pages/index.css
@@ -46,3 +46,7 @@
 @import url(../blocks/form/__input/_place_position/form__input_place_position.css);
 @import url(../blocks/form/__input/_place-link_position/form__input_place-link_position.css);
 @import url(../blocks/form/__save-button/form__save-button.css);
+/*---error---*/
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_name_position/form__input-error_name_position.css);
+@import url(../blocks/form/__input-error/_profession_position/form__input-error_profession_position.css);
