--- a/blocks/form/__submit_inactive/form__submit_inactive.css
+++ b/blocks/form/__submit_inactive/form__submit_inactive.css
@@ -1,6 +1,8 @@
 .form__submit_inactive {
     opacity: 0.2;
     cursor: default;
+    background-color: #fff;
+    color: #000;
 }
 .form__submit_inactive:hover {
     opacity: 0.2;
