--- a/pages/index.css
+++ b/pages/index.css
@@ -51,3 +51,5 @@
 @import url(../blocks/form/__input-error/_name_position/form__input-error_name_position.css);
 @import url(../blocks/form/__input-error/_profession_position/form__input-error_profession_position.css);
 @import url(../blocks/form/__submit_inactive/form__submit_inactive.css);
+@import url(../blocks/form/__input-error/_place-input_position/form__input-error_place-input_position.css);
+@import url(../blocks/form/__input-error/_place-link-input_position/form__input-error_place-link-input_position.css);
