--- a/blocks/form/__input-error/_place-input_position/form__input-error_place-input_position.css
+++ b/blocks/form/__input-error/_place-input_position/form__input-error_place-input_position.css
@@ -1,5 +1,11 @@
 .form__input-error_place-input_position {
     position: absolute;
     left: 0;
-    top: 111px;
+    top: 130px;
 }
+
+@media screen and (min-width: 880px) {
+    .form__input-error_place-input_position {
+        top: 111px
+    }
+    }
