fix: bugs review v1.0

--- a/blocks/form/__input-error/_place-input_position/form__input-error_place-input_position.css
+++ b/blocks/form/__input-error/_place-input_position/form__input-error_place-input_position.css
@@ -6,6 +6,6 @@
 
 @media screen and (min-width: 880px) {
     .form__input-error_place-input_position {
-        top: 111px
+        top: 111px;
     }
-    }
+}
