--- a/blocks/form/__input-error/_name_position/form__input-error_name_position.css
+++ b/blocks/form/__input-error/_name_position/form__input-error_name_position.css
@@ -5,7 +5,7 @@
 }
 
 @media screen and (min-width: 880px) {
-.form__input-error_name_position {
-    top: 111px
-}
+    .form__input-error_name_position {
+    top: 111px;
+    }
 }
